switch to adoptopenjdk